Fixed issue w/ z-index for now

--- a/src/MoviesApp.css
+++ b/src/MoviesApp.css
@@ -3,26 +3,33 @@ body {
   color: #333;
 }
 
+.MoviesApp {
+  display: flex;
+  flex-flow: column;
+}
+
 .Movies {
   display: flex;
-  height: 100vh;
   justify-content: center;
   align-content: center;
-  flex-wrap: wrap;
+  flex-flow: row wrap;
+  flex: 1;
+  max-width: 60%;
+  margin: auto;
 }
 
 .Movie {
   display: flex;
-  position: relative;
+  /* position: relative; */
   flex-direction: column;
   justify-content: space-between;
-  width: 200px;
-  height: 200px;
-  min-width: 200px;
-  margin: 5px;
-  padding: 5px;
+  width: 12rem;
+  height: 12rem;
+  min-width: 12rem;
+  margin: .5rem;
+  padding: .3rem .5rem;
   background-color: #fff;
-  box-shadow: 0 1px 4px rgba(0,0,0,.2);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 
 .Movie-rating__innerProgressBar {
@@ -33,14 +40,14 @@ body {
 .Movie-rating__progressBar {
   text-align: center;
   background-color: #5cb85c;
-  height: 10px;
+  height: .5rem;
   color: black;
 }
 
 .Movie-category {
   font-style: italic;
   display: inline;
-  padding: 0 12px;
+  padding: 0 1rem;
   border-radius: 10px;
   background-color: #f5f5f5;
   text-transform: lowercase;
@@ -48,19 +55,18 @@ body {
 
 .Movie-delete {
   color: rgb(124, 124, 124);
-  display: block;
-  position: absolute;
+  /* position: absolute; */
   font-size: 1.4rem;
-  right: 0.3em;
-  top: 0;
-  z-index: 9999;
+  /* right: 0.3em;
+  top: 0; */
   cursor: pointer;
+  text-align: right;
 }
 
 .Movie-rating__likesDislikes {
   display: flex;
   justify-content: space-evenly;
-  margin: .5rem 0;
+  margin: 0.5rem 0;
 }
 
 .Movie-rating__thumb {
@@ -68,16 +74,18 @@ body {
   cursor: pointer;
 }
 
-.Movie-rating__thumbsUp, .Movie-rating__thumbsDown {
+.Movie-rating__thumbsUp,
+.Movie-rating__thumbsDown {
   color: #333;
 }
 
-.Movie-rating__thumb:hover, .Movie-delete:hover {
+.Movie-rating__thumb:hover,
+.Movie-delete:hover {
   color: #333;
   transition: 0.5s;
   cursor: pointer;
 }
 
-.fas {
-  font-size: 1.6rem;
+.fa-thumbs-up, .fa-thumbs-down {
+  font-size: 1.4rem;
 }
